--- a/index.html
+++ b/index.html
@@ -1,7 +1,194 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Restaurant Name</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+  <section id="home">
+    <h1>Welcome to Tyler's Cooking Place</h1>
+    <p>Ok lets do it</p>
+    <a href="#menu" class="btn">View Menu</a>
+  </section>
+
+  <section class="menu" id="menu">
+    <h2 class="menu__title">Our Menu</h2>
+    <div class="menu__section">
+        <h3 class="menu__section-title">Appetizers</h3>
+        <p>We don't have those</p>
+    </div>
+
+    <div class="menu__section">
+        <h3 class="menu__section-title">Main Dishes</h3>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Pickle Sandwich</h4>
+            <p class="menu-item__description">...mmm pickles, you know. Some people call them pookles</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Egg Burger</h4>
+            <p class="menu-item__description">Thats really good. It tastes like, you know, egg</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Banana Waffles</h4>
+            <p class="menu-item__description">It's real treat-y</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Tomato Salad</h4>
+            <p class="menu-item__description">That's what people call them. Fer-matoes. It tastes like salad</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Pasta with tomatos in it</h4>
+            <p class="menu-item__description">It tastes like tomato</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Just Sushi</h4>
+            <p class="menu-item__description">It tastes just like sushi with no meat</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Chicken Cereal</h4>
+            <p class="menu-item__description">It tastes like pickles</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Carrot</h4>
+            <p class="menu-item__description">It doesn't come with anything. It's for the air.</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Car Shaped Waffles</h4>
+            <p class="menu-item__description">A lot of them. They taste like waffles.</p>
+            <span class="menu-item__price">$5</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Bread</h4>
+            <p class="menu-item__description">It tastes like pickle juice.</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Carrot</h4>
+            <p class="menu-item__description">It doesn't come with anything. It's for the air.</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        
+    </div>
+
+    <div class="menu__section">
+        <h3 class="menu__section-title">Drinks</h3>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Chocolate Milk</h4>
+            <p class="menu-item__description">We have chocolate milke but it's not any good</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Fizzy Drinks</h4>
+            <p class="menu-item__description">Red ones, just red ones. I think it tastes like tomato.</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Pickle Juice</h4>
+            <p class="menu-item__description">Just Pickle Juice</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Water</h4>
+            <p class="menu-item__description">It's just water, its clear</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+    </div>
+
+    <div class="menu__section">
+        <h3 class="menu__section-title">Treats</h3>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Candy Corn</h4>
+            <p class="menu-item__description">A treat that is so good</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Sprinkle Cake</h4>
+            <p class="menu-item__description">It has NO FLAVORRR.</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+        <div class="menu-item">
+            <h4 class="menu-item__title">Just Cake</h4>
+            <p class="menu-item__description">No good.</p>
+            <span class="menu-item__price">Neogotiable</span>
+        </div>
+    </div>
+    <!-- Add more menu items as needed -->
+  </section>
+
+  <section class="reviews">
+    <h2 class="reviews__heading">Customer Reviews</h2>
+    <div class="reviews__carousel">
+      <div class="reviews__slide">
+        <p class="reviews__quote">"Great food and excellent service!"</p>
+        <div class="reviews__rating">
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+        </div>
+        <p class="reviews__author">- John Doe</p>
+      </div>
+      <div class="reviews__slide">
+        <p class="reviews__quote">"The best restaurant in town!"</p>
+        <div class="reviews__rating">
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+        </div>
+        <p class="reviews__author">- Jane Smith</p>
+      </div>
+      <div class="reviews__slide">
+        <p class="reviews__quote">"Highly recommended. Amazing experience!"</p>
+        <div class="reviews__rating">
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+          <span class="reviews__star"></span>
+        </div>
+        <p class="reviews__author">- Alex Johnson</p>
+      </div>
+    </div>
+    <div class="reviews__controls">
+      <button class="reviews__prev-btn">Prev</button>
+      <button class="reviews__next-btn">Next</button>
+    </div>
+  </section>
+  
+
+  <section id="about">
+    <h2>About Us</h2>
+    <p>I thought you might want it. We've been open about 3, 5 seconds.</p>
+  </section>
+
+  <section class="hours">
+    <h2 class="hours__heading">Opening Hours</h2>
+    <ul class="hours__list">
+      <li class="hours__item">
+        <span class="hours__day">Tomorrow</span>
+        <span class="hours__time">4:00 AM</span>
+      </li>
+    </ul>
+  </section>
+  
+
+  <footer>
+    <script src="main.js"></script>
+    <p>&copy; 2023 Tyler's Cooking Place. All rights reserved.</p>
+  </footer>
 </body>
 </html>
