--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant Name</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -126,47 +128,92 @@
     <!-- Add more menu items as needed -->
   </section>
 
-  <section class="reviews">
+  <section class="container position-relative">
     <h2 class="reviews__heading">Customer Reviews</h2>
-    <div class="reviews__carousel">
-      <div class="reviews__slide">
-        <p class="reviews__quote">"Great food and excellent service!"</p>
-        <div class="reviews__rating">
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
+    <div id="carouselExample" class="carousel slide mt-5">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="carousel-rating">
+            <div class="d-flex justify-content-evenly">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <div class="carousel-content">
+            <p class="carousel-review">I won't be coming here again. The owner was brought my food to me and asked me to try the milk. It was normal milk. The issue arose when he asked to drink my milk after I had taken a drink of it. </p>
+          </div>  
         </div>
-        <p class="reviews__author">- John Doe</p>
-      </div>
-      <div class="reviews__slide">
-        <p class="reviews__quote">"The best restaurant in town!"</p>
-        <div class="reviews__rating">
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
+        <div class="carousel-item">
+          <div class="carousel-rating">
+            <div class="d-flex justify-content-evenly">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <div class="carousel-content">
+            <p class="carousel-review">I watched the owner pet his cat, and then put my food on the plate. Nasty.</p>
+          </div>  
         </div>
-        <p class="reviews__author">- Jane Smith</p>
-      </div>
-      <div class="reviews__slide">
-        <p class="reviews__quote">"Highly recommended. Amazing experience!"</p>
-        <div class="reviews__rating">
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
-          <span class="reviews__star"></span>
+        <div class="carousel-item">
+          <div class="carousel-rating">
+            <div class="d-flex justify-content-evenly">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <div class="carousel-content">
+            <p class="carousel-review">The owner brought my fish to me, and right before he handed me the fish (which was not on a plate might I add) he began screaming at it. He also kept shoving it in his shirt saying "fish appear". My first and last time here.</p>
+          </div> 
         </div>
-        <p class="reviews__author">- Alex Johnson</p>
+        <div class="carousel-item">
+          <div class="carousel-rating">
+            <div class="d-flex justify-content-evenly">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <div class="carousel-content">
+            <p class="carousel-review">I went to the counter to order my food and waited it on it to be ready. Once the owner gave me my food, he demanded that I go sit down and eat.</p>
+          </div> 
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-rating">
+            <div class="d-flex justify-content-evenly">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <div class="carousel-content">
+            <p class="carousel-review">The owner would not let me order the food I wanted. He told me that I was just getting pickled fish. Is that even on the menu?</p>
+          </div> 
+        </div>
       </div>
+      
     </div>
-    <div class="reviews__controls">
-      <button class="reviews__prev-btn">Prev</button>
-      <button class="reviews__next-btn">Next</button>
+    <div class="d-flex justify-content-center align-items-end">
+      <button class="carousel-control-prev carousel-btn text-bg-dark" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="">Previous</span>
+      </button>
+      <button class="carousel-control-next  carousel-btn text-bg-dark" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="">Next</span>
+      </button>
     </div>
+   
   </section>
   
 
@@ -179,7 +226,7 @@
     <h2 class="hours__heading">Opening Hours</h2>
     <ul class="hours__list">
       <li class="hours__item">
-        <span class="hours__day">Tomorrow</span>
+        <span class="hours__day">Saturday</span>
         <span class="hours__time">4:00 AM</span>
       </li>
     </ul>
@@ -187,6 +234,7 @@
   
 
   <footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
     <p>&copy; 2023 Tyler's Cooking Place. All rights reserved.</p>
   </footer>
