--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </div>
       
     </div>
-    <div class="d-flex justify-content-center align-items-end">
+    <div class="d-flex justify-content-center align-items-end mb-3">
       <button class="carousel-control-prev carousel-btn text-bg-dark" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
         <span class="">Previous</span>
       </button>
