--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="carousel-content">
-            <p class="carousel-review">I won't be coming here again. The owner was brought my food to me and asked me to try the milk. It was normal milk. The issue arose when he asked to drink my milk after I had taken a drink of it. </p>
+            <p class="carousel-review">I won't be coming here again. The owner brought my food to me and asked me to try the milk. It was normal milk. The issue arose when he asked to drink my milk after I had taken a drink of it. </p>
           </div>  
         </div>
         <div class="carousel-item">
