--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Welcome to Tyler's Cooking Place</h1>
     <p>Ok lets do it</p>
     <a href="#menu" class="btn">View Menu</a>
+    <a href="#reviews" class="btn">Reviews</a>
   </section>
 
   <section class="menu" id="menu">
@@ -128,7 +129,7 @@
     <!-- Add more menu items as needed -->
   </section>
 
-  <section class="container position-relative">
+  <section class="container position-relative" id="reviews">
     <h2 class="reviews__heading">Customer Reviews</h2>
     <div id="carouselExample" class="carousel slide mt-5">
       <div class="carousel-inner">
