--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 
   <section id="home">
     <h1>Welcome to Tyler's Cooking Place</h1>
-    <p>Ok lets do it</p>
-    <a href="#menu" class="btn">View Menu</a>
-    <a href="#reviews" class="btn">Reviews</a>
+    <p>Ok lets do it!</p>
+    <div class="nav-btns d-flex justify-content-center align-items-center flex-column">
+      <a href="#menu" class="btn d-block">View Menu</a>
+      <a href="#reviews" class="btn d-block">Reviews</a>
+    </div>
+
   </section>
 
   <section class="menu" id="menu">
