--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant Name</title>
+  <title>Tyler's Cooking Place</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <meta name="title" content="Tyler's Cooking Place">
+    <meta name="apple-mobile-web-app-title" content="Tyler's Cooking Place">
+    <meta name="description" content="Tyler's Cooking Place!">
+    <meta name="keywords" content="">
+
+    <meta property="og:title" content="Tyler's Cooking Place" />
+    <meta property="og:description" content="Tyler's Cooking Place!" />
+    <meta property="og:image" content="thumb.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="800" />
 </head>
 <body>
 
@@ -32,37 +43,37 @@
         <div class="menu-item">
             <h4 class="menu-item__title">Pickle Sandwich</h4>
             <p class="menu-item__description">...mmm pickles, you know. Some people call them pookles</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Egg Burger</h4>
             <p class="menu-item__description">Thats really good. It tastes like, you know, egg</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Banana Waffles</h4>
             <p class="menu-item__description">It's real treat-y</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Tomato Salad</h4>
             <p class="menu-item__description">That's what people call them. Fer-matoes. It tastes like salad</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Pasta with tomatos in it</h4>
             <p class="menu-item__description">It tastes like tomato</p>
-            <span class="menu-item__price">Neogotiable</span>
-        </div>
+            <span class="menu-item__price">Negotiable</span>
+        <carrot/div>
         <div class="menu-item">
             <h4 class="menu-item__title">Just Sushi</h4>
             <p class="menu-item__description">It tastes just like sushi with no meat</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Chicken Cereal</h4>
             <p class="menu-item__description">It tastes like pickles</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Car Shaped Waffles</h4>
@@ -72,12 +83,12 @@
         <div class="menu-item">
             <h4 class="menu-item__title">Bread</h4>
             <p class="menu-item__description">It tastes like pickle juice.</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Carrot</h4>
             <p class="menu-item__description">It doesn't come with anything. It's for the air.</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         
     </div>
@@ -87,22 +98,22 @@
         <div class="menu-item">
             <h4 class="menu-item__title">Chocolate Milk</h4>
             <p class="menu-item__description">We have chocolate milke but it's not any good</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Fizzy Drinks</h4>
             <p class="menu-item__description">Red ones, just red ones. I think it tastes like tomato.</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Pickle Juice</h4>
             <p class="menu-item__description">Just Pickle Juice</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Water</h4>
             <p class="menu-item__description">It's just water, its clear</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
     </div>
 
@@ -111,17 +122,17 @@
         <div class="menu-item">
             <h4 class="menu-item__title">Candy Corn</h4>
             <p class="menu-item__description">A treat that is so good</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Sprinkle Cake</h4>
             <p class="menu-item__description">It has NO FLAVORRR.</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Just Cake</h4>
             <p class="menu-item__description">No good.</p>
-            <span class="menu-item__price">Neogotiable</span>
+            <span class="menu-item__price">Negotiable</span>
         </div>
     </div>
     <!-- Add more menu items as needed -->
