--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h4 class="menu-item__title">Pasta with tomatos in it</h4>
             <p class="menu-item__description">It tastes like tomato</p>
             <span class="menu-item__price">Negotiable</span>
-        <carrot/div>
+        </div>
         <div class="menu-item">
             <h4 class="menu-item__title">Just Sushi</h4>
             <p class="menu-item__description">It tastes just like sushi with no meat</p>
@@ -90,7 +90,6 @@
             <p class="menu-item__description">It doesn't come with anything. It's for the air.</p>
             <span class="menu-item__price">Negotiable</span>
         </div>
-        
     </div>
 
     <div class="menu__section">
@@ -160,14 +159,42 @@
           <div class="carousel-rating">
             <div class="d-flex justify-content-evenly">
               <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
               <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <div class="carousel-content">
+            <p class="carousel-review">The food was good but taking off one star for the negotiable pricing, as it isn't consistent, and because the owner had no understanding of personal space.</p>
+          </div>  
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-rating">
+            <div class="d-flex justify-content-evenly">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
               <span class="fa fa-star"></span>
               <span class="fa fa-star"></span>
             </div>
           </div>
           <div class="carousel-content">
-            <p class="carousel-review">I watched the owner pet his cat, and then put my food on the plate. Nasty.</p>
+            <p class="carousel-review">I watched the owner pet his cat, and then put my food on the plate. Nasty. The food was decent though. Afterwards to wash his hands, he asked me to help him with his stepstool, and then promptly told to go away.</p>
+          </div>  
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-rating">
+            <div class="d-flex justify-content-evenly">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <div class="carousel-content">
+            <p class="carousel-review">I tried the pasta with tomatoes in it and it was lacking in flavor. The owner insisted I try the chocolate milk and as described in the menu... it was no good. I have them a 3 since the owner is pretty cute.</p>
           </div>  
         </div>
         <div class="carousel-item">
@@ -202,6 +229,20 @@
           <div class="carousel-rating">
             <div class="d-flex justify-content-evenly">
               <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <div class="carousel-content">
+            <p class="carousel-review">All the food I had was just okay. The owner stood beside my table and told me knock-knocks jokes while I ate... They weren't the best jokes, but he forced me to laugh everytime.</p>
+          </div>  
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-rating">
+            <div class="d-flex justify-content-evenly">
+              <span class="fa fa-star checked"></span>
               <span class="fa fa-star"></span>
               <span class="fa fa-star"></span>
               <span class="fa fa-star"></span>
@@ -211,6 +252,20 @@
           <div class="carousel-content">
             <p class="carousel-review">The owner would not let me order the food I wanted. He told me that I was just getting pickled fish. Is that even on the menu?</p>
           </div> 
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-rating">
+            <div class="d-flex justify-content-evenly">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <div class="carousel-content">
+            <p class="carousel-review">The food looked great, but flavor was lacking. It was almost like I was trying to eat painted wood blocks.</p>
+          </div>  
         </div>
       </div>
       
