--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
           </div>
           <div class="carousel-content">
-            <p class="carousel-review">I tried the pasta with tomatoes in it and it was lacking in flavor. The owner insisted I try the chocolate milk and as described in the menu... it was no good. I have them a 3 since the owner is pretty cute.</p>
+            <p class="carousel-review">I tried the pasta with tomatoes in it and it was lacking in flavor. The owner insisted I try the chocolate milk and as described in the menu... it was no good. I gave them 3 stars since the owner is pretty cute.</p>
           </div>  
         </div>
         <div class="carousel-item">
@@ -215,9 +215,9 @@
           <div class="carousel-rating">
             <div class="d-flex justify-content-evenly">
               <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
               <span class="fa fa-star"></span>
             </div>
           </div>
@@ -236,15 +236,15 @@
             </div>
           </div>
           <div class="carousel-content">
-            <p class="carousel-review">All the food I had was just okay. The owner stood beside my table and told me knock-knocks jokes while I ate... They weren't the best jokes, but he forced me to laugh everytime.</p>
+            <p class="carousel-review">All the food I had was just okay. The owner stood beside my table and told me knock-knocks jokes while I ate... They weren't the best jokes, and he forced me to laugh everytime.</p>
           </div>  
         </div>
         <div class="carousel-item">
           <div class="carousel-rating">
             <div class="d-flex justify-content-evenly">
               <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
               <span class="fa fa-star"></span>
               <span class="fa fa-star"></span>
             </div>
