--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="800" />
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9SZWL9EZXK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9SZWL9EZXK');
+</script>
 <body>
 
   <section id="home">
