--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
           </div>
           <div class="carousel-content">
-            <p class="carousel-review">I watched the owner pet his cat, and then put my food on the plate. Nasty. The food was decent though. Afterwards to wash his hands, he asked me to help him with his stepstool, and then promptly told to go away.</p>
+            <p class="carousel-review">I watched the owner pet his cat, and then put my food on the plate. Nasty. The food was decent though. Afterwards to wash his hands, he asked me to help him with his stepstool, and then promptly told me to go away.</p>
           </div>  
         </div>
         <div class="carousel-item">
