--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <meta property="og:image" content="thumb.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="800" />
+
+    <meta name="robots" content="noindex">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9SZWL9EZXK"></script>
