--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h3 class="menu__section-title">Drinks</h3>
         <div class="menu-item">
             <h4 class="menu-item__title">Chocolate Milk</h4>
-            <p class="menu-item__description">We have chocolate milke but it's not any good</p>
+            <p class="menu-item__description">We have chocolate milk but it's not any good</p>
             <span class="menu-item__price">Negotiable</span>
         </div>
         <div class="menu-item">
